<resources>
    <string name="app_name">Sako</string>
    <string name="skip_intro">SKIP INTRO</string>
    <string name="next">next</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="Register">Dont Have Account? Register</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="chats">chats</string>
    <string name="circles">circles</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navdrawer">NavdrawerActivity</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu_share">share</string>
    <string name="circle_desciption">circle desciption</string>
    <string name="sacco_title">sacco Title</string>
    <string name="time_of_contribution">time of contribution</string>
    <string name="amount">amount</string>
    <string name="all_circles">Circles</string>
    <string name="interest_rate">interest rate</string>
    <string name="_4">4%</string>
    <string name="min_to_contribute">min to contribute</string>
    <string name="_100_0">100.0</string>
    <string name="members">members</string>
    <string name="top_up">Top Up</string>
    <string name="withdraw">Withdraw</string>
    <string name="loans">Loans</string>
    <string name="transactions">Transactions</string>
</resources>
