<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo3"
            android:layout_gravity="center_horizontal"

            />
        <EditText
            android:id="@+id/tv_phoneno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/ic_phone_android_black_24dp"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:hint="phonenumber"

            />
        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:inputType="numberPassword"
            android:hint="@string/password"


            />


        <TextView
            android:id="@+id/register1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:padding="10dp"
            android:layout_gravity="left"

            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textSize="21sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:backgroundTint="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"

            />
        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"

            android:padding="10dp"
            android:layout_gravity="center"

            />


    </LinearLayout>

</RelativeLayout>