<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CircleDetailsActivity"
    android:background="#F4F7FD"

    >
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingRight="25dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/all_background">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/back_arrow"
            android:scaleType="centerCrop"
             />

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/share_icon"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Invite"
            android:layout_alignParentRight="true"
            android:textStyle="bold"
            android:layout_below="@id/img_share"/>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:layout_marginTop="70dp"
            app:cardBackgroundColor="#ffffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardElevation="0dp"

                >



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/circleImg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="Circles"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/circleImg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_cards"
                    app:srcCompat="@drawable/members" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="0dp"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/no_of_members"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/imageView3"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="0"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/members"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/no_of_members"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/members"
                                android:textSize="14sp" />

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="15dp"
                                android:background="@drawable/rounded_cards"
                                app:srcCompat="@drawable/member" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="0dp"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/amount_contib"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/imageView6"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/_100_0"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/amount_contib"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="minimum"
                                android:textSize="14sp" />

                            <ImageView
                                android:id="@+id/imageView6"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="15dp"
                                android:background="@drawable/rounded_cards"
                                app:srcCompat="@drawable/wallet_min" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="0dp"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/interest"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/imageView5"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/_4"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/interest_rate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/interest"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/interest_rate"
                                android:textSize="14sp" />

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="15dp"
                                android:layout_marginEnd="13dp"
                                android:layout_marginRight="13dp"
                                android:background="@drawable/rounded_cards"
                                app:srcCompat="@drawable/rate"
                                />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintVertical_bias="0.10">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="7dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/name_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="20dp"
                android:text="About "
                android:textSize="22dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="description"
                android:textSize="15dp"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_drawable"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        app:elevation="0dp"
        app:itemIconTint="@drawable/tab_selected"
        app:itemTextColor="@drawable/tab_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>